ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/Beneficiary_BL_Code_Product__c.object-meta.xml
<CustomObject>
    <label>Beneficiary_BL_Code_Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiary_BL_Code_Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>