ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/fields/Beneficiary_Master__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary Master</label>
    <referenceTo>Benefi__c</referenceTo>
    <relationshipLabel>Beneficiary_BL_Code_Products</relationshipLabel>
    <relationshipName>Beneficiary_BL_Code_Products</relationshipName>
    <type>Lookup</type>
</CustomField>