ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/fields/Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bl Code</label>
    <referenceTo>Bl_Code_Details__c</referenceTo>
    <relationshipLabel>Beneficiary_BL_Code_Products</relationshipLabel>
    <relationshipName>Beneficiary_BL_Code_Products</relationshipName>
    <type>Lookup</type>
</CustomField>