ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Beneficiary_BL_Code_Products</relationshipLabel>
    <relationshipName>Beneficiary_BL_Code_Products</relationshipName>
    <type>Lookup</type>
</CustomField>