ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/fields/Refernce_External__c.field-meta.xml
<CustomField>
    <fullName>Refernce_External__c</fullName>
    <externalId>true</externalId>
    <label>Refernce_External</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>