ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/recordTypes/Ben_Category.recordType-meta.xml
<RecordType>
    <fullName>Ben_Category</fullName>
    <active>true</active>
    <label>Ben Category</label>
</RecordType>