ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/recordTypes/Ben_Product.recordType-meta.xml
<RecordType>
    <fullName>Ben_Product</fullName>
    <active>true</active>
    <label>Ben Product</label>
</RecordType>