ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/recordTypes/BenBl_Code.recordType-meta.xml
<RecordType>
    <fullName>BenBl_Code</fullName>
    <active>true</active>
    <label>BenBl  Code</label>
</RecordType>