ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/listViews/Beneficiary_BL_Code.listView-meta.xml
<ListView>
    <fullName>Beneficiary_BL_Code</fullName>
    <columns>Beneficiary_Master__c</columns>
    <columns>Bl_Code__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Beneficiary_BL_Code_Product__c.BenBl_Code</value>
    </filters>
    <label>Beneficiary BL Code</label>
</ListView>