ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/listViews/Beneficiary_Category.listView-meta.xml
<ListView>
    <fullName>Beneficiary_Category</fullName>
    <columns>Beneficiary_Master__c</columns>
    <columns>Category__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Beneficiary_BL_Code_Product__c.Ben_Category</value>
    </filters>
    <label>Beneficiary Category</label>
</ListView>