ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_BL_Code_Product__c/listViews/Beneficiary_Product.listView-meta.xml
<ListView>
    <fullName>Beneficiary_Product</fullName>
    <columns>Beneficiary_Master__c</columns>
    <columns>Product__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Beneficiary_BL_Code_Product__c.Ben_Product</value>
    </filters>
    <label>Beneficiary Product</label>
</ListView>